--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,11 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>5.2.9.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.0</version>
+        </dependency>
 
 
     </dependencies>
