--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <version>2.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.5.3</version>
+        </dependency>
 
     </dependencies>
 
