--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Java template
 # Compiled class file
 *.class
 
@@ -22,6 +20,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-.gitignore
-.idea/workspace.xml
+# Intellij project files
+*.iml
+*.ipr
+*.iws
+.idea/
