--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,10 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
-//spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.thymeleaf.cache =  false
 
 liquibase.change-log= classpath:/liquibase-changelog.xml
+server.error.whitelabel.enabled=false
+server.port = 8080
