--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.thymeleaf.cache =  false
 liquibase.change-log= classpath:/liquibase-changelog.xml
 server.error.whitelabel.enabled=false
 server.port = 8080
+server.contextPath=/api/facebook
