--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.social.facebook.appId=197190257452438
 spring.social.facebook.appSecret=91a652a1173c077335cd834dcf75a587
 
-spring.datasource.url=jdbc:mysql://localhost/facebook?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&nullNamePatternMatchesAll=true
+spring.datasource.url=jdbc:mysql://localhost/facebook?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&nullNamePatternMatchesAll=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.connection.CharSet=utf8
+spring.jpa.properties.connection.characterEncoding=utf8
+spring.jpa.properties.hibernate.connection.useUnicode=true
 
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto = create-drop
