implemented send email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,14 @@ spring.jpa.properties.connection.CharSet=utf8
 spring.jpa.properties.connection.characterEncoding=utf8
 spring.jpa.properties.hibernate.connection.useUnicode=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zorozoro30000@gmail.com
+spring.mail.password=Aa123456!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto = create-drop
 
