--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,6 @@ spring.thymeleaf.cache =  false
 
 liquibase.change-log= classpath:/liquibase-changelog.xml
 server.error.whitelabel.enabled=false
-server.port = 8080
+//server.port = 8080
+spring.mvc.favicon.enabled=false
 server.contextPath=/api/facebook
