--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,8 @@ spring.thymeleaf.cache =  false
 liquibase.change-log= classpath:/liquibase-changelog.xml
 server.error.whitelabel.enabled=false
 //server.port = 8080
+
 spring.mvc.favicon.enabled=false
+spring.favicon.enabled=false
+
 server.contextPath=/api/facebook
