--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,13 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.0.2</version>
         </dependency>
-             
-             
-             <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
-<dependency>
-    <groupId>postgresql</groupId>
-    <artifactId>postgresql</artifactId>
-    <version>9.4.1208-jdbc42-atlassian-hosted</version>
-</dependency>
+
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
+        </dependency>
 
 
     </dependencies>
