--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,4 @@ liquibase.change-log= classpath:/liquibase-changelog.xml
 server.error.whitelabel.enabled=false
 server.port = 5432
 spring.mvc.favicon.enabled=false
-server.contextPath=/api/facebook
+#server.contextPath=/api/facebook
